// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UserProfile Matches Snapshot (defaultOpen) 1`] = `
.c1 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background: inherit;
  border: 1px solid;
  border-radius: 1.5rem;
  box-sizing: border-box;
  color: inherit;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-family: inherit;
  font-size: 0.75rem;
  font-weight: var(--font-bold);
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-letter-spacing: 0.025rem;
  -moz-letter-spacing: 0.025rem;
  -ms-letter-spacing: 0.025rem;
  letter-spacing: 0.025rem;
  line-height: 1rem;
  min-height: var(--size-2x);
  min-width: 2rem;
  outline: none;
  padding: 0 var(--spacing-2x);
  text-transform: uppercase;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.c1 {
  outline: 2px solid transparent;
  outline-offset: -2px;
}

.c1:focus-visible {
  box-shadow: 0 0 0 2px #006296;
  outline: 2px solid #84C6EA;
  outline-offset: -2px;
}

.c1 > svg {
  height: var(--size-1x);
  width: var(--size-1x);
}

.c2 {
  background-color: transparent;
  border-color: transparent;
  color: #FFFFFF;
  padding: 0;
  width: var(--size-2x);
}

.c2 {
  outline: 2px solid transparent;
  outline-offset: -2px;
}

.c2:focus-visible {
  box-shadow: 0 0 0 2px #84C6EA;
  outline: 2px solid #006296;
  outline-offset: -2px;
}

.c2:hover,
.c2[aria-expanded='true'] {
  background-color: rgb(0 0 0 / 0.5);
  border-color: transparent;
  color: #FFFFFF;
}

.c2[aria-disabled='true'] {
  background-color: transparent;
  border-color: transparent;
  color: #006296;
  cursor: not-allowed;
  pointer-events: none;
}

.c3 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background: #F1F2F2;
  border-radius: 50%;
  color: #60666E;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-weight: var(--font-semi-bold);
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  text-transform: capitalize;
  font-size: 0.625rem;
  height: var(--size-1halfx);
  -webkit-letter-spacing: 0.011rem;
  -moz-letter-spacing: 0.011rem;
  -ms-letter-spacing: 0.011rem;
  letter-spacing: 0.011rem;
  width: var(--size-1halfx);
}

.c5 {
  background-color: #FFFFFF;
  border: 1px solid #878F9A;
  border-radius: var(--border-radius);
  box-shadow: 0 10px 20px 0 rgb(0 0 0 / 0.2);
  color: #1B1C1E;
  list-style-type: none;
  position: absolute;
  width: 100%;
  z-index: 700;
}

.c0 {
  position: relative;
}

.c6 {
  max-width: 350px;
  min-width: 200px;
  right: 0;
  width: initial;
}

.c17 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-radius: var(--border-radius);
  color: #006296;
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-size: 0.875rem;
  line-height: 1.5rem;
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.c17:hover {
  color: #003A5A;
}

.c17:visited {
  color: #006296;
}

.c17 {
  outline: 2px solid transparent;
  outline-offset: -2px;
}

.c17:focus-visible {
  box-shadow: 0 0 0 2px #006296;
  outline: 2px solid #84C6EA;
  outline-offset: -2px;
}

.c16 {
  border: 0;
  -webkit-clip: rect(0,0,0,0);
  clip: rect(0,0,0,0);
  height: 1px;
  margin: -1px;
  overflow: hidden;
  padding: 0;
  position: absolute;
  width: 1px;
}

.c21 {
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  height: 1rem;
  margin-left: var(--spacing-half);
  margin-right: 0;
  width: 1rem;
}

.c18 {
  -webkit-align-items: baseline;
  -webkit-box-align: baseline;
  -ms-flex-align: baseline;
  align-items: baseline;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
}

.c18:visited svg {
  color: #006296;
}

.c20 {
  display: block;
  overflow: hidden;
  text-overflow: ellipsis;
}

.c7 {
  margin: 0;
  overflow-y: auto;
  padding: 0;
}

.c7:not(:last-child)::after {
  border-bottom: 1px solid #DBDEE1;
  content: '';
  display: block;
  margin: 0 var(--spacing-2x);
}

.c10 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  max-width: 100%;
}

.c11 {
  line-height: 1.25rem;
  margin: auto var(--spacing-1x) auto 0;
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
}

.c9 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-flow: row wrap;
  -ms-flex-flow: row wrap;
  flex-flow: row wrap;
  font-size: 0.75rem;
  margin: 0;
  overflow: hidden;
  padding: 0 0 0 var(--spacing-half);
}

.c13 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-flow: row wrap;
  -ms-flex-flow: row wrap;
  flex-flow: row wrap;
  font-size: 0.875rem;
  margin: 0;
  overflow: hidden;
  padding: 0 0 0 var(--spacing-half);
}

.c8 {
  color: #1B1C1E;
  display: block;
  font-size: 0.875rem;
  line-height: 2rem;
  overflow: hidden;
  padding: var(--spacing-1x) var(--spacing-2x);
  -webkit-text-decoration: none;
  text-decoration: none;
  white-space: nowrap;
}

.c12 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: #1B1C1E;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-size: 0.875rem;
  height: 2rem;
  line-height: 2rem;
  padding: 0 var(--spacing-2x);
  -webkit-text-decoration: none;
  text-decoration: none;
  white-space: nowrap;
}

.c12 {
  outline: 2px solid transparent;
  outline-offset: -2px;
}

.c12:focus-visible {
  box-shadow: 0 0 0 0 transparent;
  outline: 2px solid #006296;
  outline-offset: -2px;
}

.c12:hover {
  background-color: #DBDEE1;
}

.c12[disabled],
.c12[disabled] * {
  color: #B7BBC2;
  cursor: default;
  fill: #B7BBC2;
  pointer-events: none;
}

.c14 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: #1B1C1E;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-size: 0.875rem;
  height: 2rem;
  line-height: 2rem;
  padding: 0 var(--spacing-2x);
  -webkit-text-decoration: none;
  text-decoration: none;
  white-space: nowrap;
}

.c14 {
  outline: 2px solid transparent;
  outline-offset: -2px;
}

.c14:focus-visible {
  box-shadow: 0 0 0 0 transparent;
  outline: 2px solid #006296;
  outline-offset: -2px;
}

.c14:hover {
  background-color: transparent;
}

.c14[disabled],
.c14[disabled] * {
  color: #B7BBC2;
  cursor: default;
  fill: #B7BBC2;
  pointer-events: none;
}

.c15 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: #1B1C1E;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-size: 0.875rem;
  height: 2rem;
  line-height: 2rem;
  padding: 0 var(--spacing-2x);
  -webkit-text-decoration: none;
  text-decoration: none;
  white-space: nowrap;
}

.c15 {
  outline: 2px solid transparent;
  outline-offset: -2px;
}

.c15:focus-visible {
  box-shadow: 0 0 0 0 transparent;
  outline: 2px solid #006296;
  outline-offset: -2px;
}

.c15:hover {
  background-color: #DBDEE1;
}

.c15[disabled],
.c15[disabled] * {
  color: #B7BBC2;
  cursor: default;
  fill: #B7BBC2;
  pointer-events: none;
}

.c19 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: #1B1C1E;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-size: 0.875rem;
  height: 2rem;
  line-height: 2rem;
  padding: 0 var(--spacing-2x);
  -webkit-text-decoration: none;
  text-decoration: none;
  white-space: nowrap;
  padding: 0 var(--spacing-2x);
}

.c19 {
  outline: 2px solid transparent;
  outline-offset: -2px;
}

.c19:focus-visible {
  box-shadow: 0 0 0 0 transparent;
  outline: 2px solid #006296;
  outline-offset: -2px;
}

.c19:hover {
  background-color: #DBDEE1;
}

.c19[disabled],
.c19[disabled] * {
  color: #B7BBC2;
  cursor: default;
  fill: #B7BBC2;
  pointer-events: none;
}

.c19:visited svg {
  color: #1B1C1E;
}

.c19 span {
  color: #1B1C1E;
  padding: 0 0 0 var(--spacing-half);
}

.c4 {
  margin-right: 0;
}

<div
  aria-label=""
  class="c0 "
  data-testid="dropdown-container"
  id="uuid1"
>
  <button
    aria-expanded="true"
    class="c1 c2"
    data-testid="menu-button"
    type="button"
  >
    <div
      aria-label="Test Button avatar"
      class="c3 c4"
      role="img"
    >
      <span
        data-testid="avatar-initials"
      >
        TB
      </span>
    </div>
  </button>
  <div
    class="c5 c6"
    data-testid="user-profile"
    id="uuid2"
  >
    <ul
      aria-labelledby="user-label"
      class="c7"
    >
      <li
        class="c8"
      >
        <div
          class="c9"
        >
          <div
            class="c10"
          >
            <span
              class="c11"
            >
              Test Button
            </span>
          </div>
        </div>
      </li>
    </ul>
    <ul
      aria-labelledby="user-actions"
      class="c7"
    >
      <li>
        <a
          aria-disabled="false"
          class="c12"
          data-testid="listitem-optionA"
          href="/testa"
          tabindex="0"
        >
          <div
            class="c13"
          >
            <div
              class="c10"
            >
              <span
                class="c11"
              >
                Option A
              </span>
            </div>
          </div>
        </a>
      </li>
      <li>
        <a
          aria-disabled="true"
          class="c14"
          data-testid="listitem-optionB"
          disabled=""
          href="/testb"
          tabindex="-1"
        >
          <div
            class="c13"
          >
            <div
              class="c10"
            >
              <span
                class="c11"
              >
                Option B
              </span>
            </div>
          </div>
        </a>
      </li>
      <li>
        <a
          aria-disabled="false"
          class="c12"
          data-testid="listitem-optionC"
          href="/testc"
          tabindex="0"
        >
          <div
            class="c13"
          >
            <div
              class="c10"
            >
              <span
                class="c11"
              >
                Option C
              </span>
            </div>
          </div>
        </a>
      </li>
      <li>
        <a
          aria-disabled="false"
          class="c15"
          href="www.test.ca"
          tabindex="0"
          target="_blank"
        >
          <div
            class="c13"
          >
            <div
              class="c10"
            >
              <span
                class="c11"
              >
                Option D
              </span>
            </div>
          </div>
          <span
            class="c16"
            data-testid="screen-reader-text"
          >
            (opens in a new tab)
          </span>
        </a>
      </li>
      <li>
        <a
          aria-disabled="false"
          class="c17 c18 c19"
          href="www.test.ca"
          target="_blank"
        >
          <span
            class="c20"
          >
            Option E
          </span>
          <svg
            aria-label="opens in a new tab"
            class="c21"
            color="currentColor"
            focusable="false"
            height="16"
            role="img"
            width="16"
          />
          <span
            class="c16"
            data-testid="screen-reader-text"
          >
            (opens in a new tab)
          </span>
        </a>
      </li>
    </ul>
  </div>
</div>
`;

exports[`UserProfile Matches Snapshot (desktop) 1`] = `
.c1 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background: inherit;
  border: 1px solid;
  border-radius: 1.5rem;
  box-sizing: border-box;
  color: inherit;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-family: inherit;
  font-size: 0.75rem;
  font-weight: var(--font-bold);
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-letter-spacing: 0.025rem;
  -moz-letter-spacing: 0.025rem;
  -ms-letter-spacing: 0.025rem;
  letter-spacing: 0.025rem;
  line-height: 1rem;
  min-height: var(--size-2x);
  min-width: 2rem;
  outline: none;
  padding: 0 var(--spacing-2x);
  text-transform: uppercase;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.c1 {
  outline: 2px solid transparent;
  outline-offset: -2px;
}

.c1:focus-visible {
  box-shadow: 0 0 0 2px #006296;
  outline: 2px solid #84C6EA;
  outline-offset: -2px;
}

.c1 > svg {
  height: var(--size-1x);
  width: var(--size-1x);
}

.c2 {
  background-color: transparent;
  border-color: transparent;
  color: #FFFFFF;
  padding: 0;
  width: var(--size-2x);
}

.c2 {
  outline: 2px solid transparent;
  outline-offset: -2px;
}

.c2:focus-visible {
  box-shadow: 0 0 0 2px #84C6EA;
  outline: 2px solid #006296;
  outline-offset: -2px;
}

.c2:hover,
.c2[aria-expanded='true'] {
  background-color: rgb(0 0 0 / 0.5);
  border-color: transparent;
  color: #FFFFFF;
}

.c2[aria-disabled='true'] {
  background-color: transparent;
  border-color: transparent;
  color: #006296;
  cursor: not-allowed;
  pointer-events: none;
}

.c3 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background: #F1F2F2;
  border-radius: 50%;
  color: #60666E;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-weight: var(--font-semi-bold);
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  text-transform: capitalize;
  font-size: 0.625rem;
  height: var(--size-1halfx);
  -webkit-letter-spacing: 0.011rem;
  -moz-letter-spacing: 0.011rem;
  -ms-letter-spacing: 0.011rem;
  letter-spacing: 0.011rem;
  width: var(--size-1halfx);
}

.c5 {
  background-color: #FFFFFF;
  border: 1px solid #878F9A;
  border-radius: var(--border-radius);
  box-shadow: 0 10px 20px 0 rgb(0 0 0 / 0.2);
  color: #1B1C1E;
  list-style-type: none;
  position: absolute;
  width: 100%;
  z-index: 700;
}

.c0 {
  position: relative;
}

.c6 {
  max-width: 350px;
  min-width: 200px;
  right: 0;
  width: initial;
}

.c17 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-radius: var(--border-radius);
  color: #006296;
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-size: 0.875rem;
  line-height: 1.5rem;
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.c17:hover {
  color: #003A5A;
}

.c17:visited {
  color: #006296;
}

.c17 {
  outline: 2px solid transparent;
  outline-offset: -2px;
}

.c17:focus-visible {
  box-shadow: 0 0 0 2px #006296;
  outline: 2px solid #84C6EA;
  outline-offset: -2px;
}

.c16 {
  border: 0;
  -webkit-clip: rect(0,0,0,0);
  clip: rect(0,0,0,0);
  height: 1px;
  margin: -1px;
  overflow: hidden;
  padding: 0;
  position: absolute;
  width: 1px;
}

.c21 {
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  height: 1rem;
  margin-left: var(--spacing-half);
  margin-right: 0;
  width: 1rem;
}

.c18 {
  -webkit-align-items: baseline;
  -webkit-box-align: baseline;
  -ms-flex-align: baseline;
  align-items: baseline;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
}

.c18:visited svg {
  color: #006296;
}

.c20 {
  display: block;
  overflow: hidden;
  text-overflow: ellipsis;
}

.c7 {
  margin: 0;
  overflow-y: auto;
  padding: 0;
}

.c7:not(:last-child)::after {
  border-bottom: 1px solid #DBDEE1;
  content: '';
  display: block;
  margin: 0 var(--spacing-2x);
}

.c10 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  max-width: 100%;
}

.c11 {
  line-height: 1.25rem;
  margin: auto var(--spacing-1x) auto 0;
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
}

.c9 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-flow: row wrap;
  -ms-flex-flow: row wrap;
  flex-flow: row wrap;
  font-size: 0.75rem;
  margin: 0;
  overflow: hidden;
  padding: 0 0 0 var(--spacing-half);
}

.c13 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-flow: row wrap;
  -ms-flex-flow: row wrap;
  flex-flow: row wrap;
  font-size: 0.875rem;
  margin: 0;
  overflow: hidden;
  padding: 0 0 0 var(--spacing-half);
}

.c8 {
  color: #1B1C1E;
  display: block;
  font-size: 0.875rem;
  line-height: 2rem;
  overflow: hidden;
  padding: var(--spacing-1x) var(--spacing-2x);
  -webkit-text-decoration: none;
  text-decoration: none;
  white-space: nowrap;
}

.c12 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: #1B1C1E;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-size: 0.875rem;
  height: 2rem;
  line-height: 2rem;
  padding: 0 var(--spacing-2x);
  -webkit-text-decoration: none;
  text-decoration: none;
  white-space: nowrap;
}

.c12 {
  outline: 2px solid transparent;
  outline-offset: -2px;
}

.c12:focus-visible {
  box-shadow: 0 0 0 0 transparent;
  outline: 2px solid #006296;
  outline-offset: -2px;
}

.c12:hover {
  background-color: #DBDEE1;
}

.c12[disabled],
.c12[disabled] * {
  color: #B7BBC2;
  cursor: default;
  fill: #B7BBC2;
  pointer-events: none;
}

.c14 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: #1B1C1E;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-size: 0.875rem;
  height: 2rem;
  line-height: 2rem;
  padding: 0 var(--spacing-2x);
  -webkit-text-decoration: none;
  text-decoration: none;
  white-space: nowrap;
}

.c14 {
  outline: 2px solid transparent;
  outline-offset: -2px;
}

.c14:focus-visible {
  box-shadow: 0 0 0 0 transparent;
  outline: 2px solid #006296;
  outline-offset: -2px;
}

.c14:hover {
  background-color: transparent;
}

.c14[disabled],
.c14[disabled] * {
  color: #B7BBC2;
  cursor: default;
  fill: #B7BBC2;
  pointer-events: none;
}

.c15 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: #1B1C1E;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-size: 0.875rem;
  height: 2rem;
  line-height: 2rem;
  padding: 0 var(--spacing-2x);
  -webkit-text-decoration: none;
  text-decoration: none;
  white-space: nowrap;
}

.c15 {
  outline: 2px solid transparent;
  outline-offset: -2px;
}

.c15:focus-visible {
  box-shadow: 0 0 0 0 transparent;
  outline: 2px solid #006296;
  outline-offset: -2px;
}

.c15:hover {
  background-color: #DBDEE1;
}

.c15[disabled],
.c15[disabled] * {
  color: #B7BBC2;
  cursor: default;
  fill: #B7BBC2;
  pointer-events: none;
}

.c19 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: #1B1C1E;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-size: 0.875rem;
  height: 2rem;
  line-height: 2rem;
  padding: 0 var(--spacing-2x);
  -webkit-text-decoration: none;
  text-decoration: none;
  white-space: nowrap;
  padding: 0 var(--spacing-2x);
}

.c19 {
  outline: 2px solid transparent;
  outline-offset: -2px;
}

.c19:focus-visible {
  box-shadow: 0 0 0 0 transparent;
  outline: 2px solid #006296;
  outline-offset: -2px;
}

.c19:hover {
  background-color: #DBDEE1;
}

.c19[disabled],
.c19[disabled] * {
  color: #B7BBC2;
  cursor: default;
  fill: #B7BBC2;
  pointer-events: none;
}

.c19:visited svg {
  color: #1B1C1E;
}

.c19 span {
  color: #1B1C1E;
  padding: 0 0 0 var(--spacing-half);
}

.c4 {
  margin-right: 0;
}

<div
  aria-label=""
  class="c0 "
  data-testid="dropdown-container"
  id="uuid1"
>
  <button
    aria-expanded="false"
    class="c1 c2"
    data-testid="menu-button"
    type="button"
  >
    <div
      aria-label="Test Button avatar"
      class="c3 c4"
      role="img"
    >
      <span
        data-testid="avatar-initials"
      >
        TB
      </span>
    </div>
  </button>
  <div
    class="c5 c6"
    data-testid="user-profile"
    hidden=""
    id="uuid2"
  >
    <ul
      aria-labelledby="user-label"
      class="c7"
    >
      <li
        class="c8"
      >
        <div
          class="c9"
        >
          <div
            class="c10"
          >
            <span
              class="c11"
            >
              Test Button
            </span>
          </div>
        </div>
      </li>
    </ul>
    <ul
      aria-labelledby="user-actions"
      class="c7"
    >
      <li>
        <a
          aria-disabled="false"
          class="c12"
          data-testid="listitem-optionA"
          href="/testa"
          tabindex="0"
        >
          <div
            class="c13"
          >
            <div
              class="c10"
            >
              <span
                class="c11"
              >
                Option A
              </span>
            </div>
          </div>
        </a>
      </li>
      <li>
        <a
          aria-disabled="true"
          class="c14"
          data-testid="listitem-optionB"
          disabled=""
          href="/testb"
          tabindex="-1"
        >
          <div
            class="c13"
          >
            <div
              class="c10"
            >
              <span
                class="c11"
              >
                Option B
              </span>
            </div>
          </div>
        </a>
      </li>
      <li>
        <a
          aria-disabled="false"
          class="c12"
          data-testid="listitem-optionC"
          href="/testc"
          tabindex="0"
        >
          <div
            class="c13"
          >
            <div
              class="c10"
            >
              <span
                class="c11"
              >
                Option C
              </span>
            </div>
          </div>
        </a>
      </li>
      <li>
        <a
          aria-disabled="false"
          class="c15"
          href="www.test.ca"
          tabindex="0"
          target="_blank"
        >
          <div
            class="c13"
          >
            <div
              class="c10"
            >
              <span
                class="c11"
              >
                Option D
              </span>
            </div>
          </div>
          <span
            class="c16"
            data-testid="screen-reader-text"
          >
            (opens in a new tab)
          </span>
        </a>
      </li>
      <li>
        <a
          aria-disabled="false"
          class="c17 c18 c19"
          href="www.test.ca"
          target="_blank"
        >
          <span
            class="c20"
          >
            Option E
          </span>
          <svg
            aria-label="opens in a new tab"
            class="c21"
            color="currentColor"
            focusable="false"
            height="16"
            role="img"
            width="16"
          />
          <span
            class="c16"
            data-testid="screen-reader-text"
          >
            (opens in a new tab)
          </span>
        </a>
      </li>
    </ul>
  </div>
</div>
`;

exports[`UserProfile Matches Snapshot (mobile) 1`] = `
.c2 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background: inherit;
  border: 1px solid;
  border-radius: 1.5rem;
  box-sizing: border-box;
  color: inherit;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-family: inherit;
  font-size: 0.875rem;
  font-weight: var(--font-bold);
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-letter-spacing: 0.033125rem;
  -moz-letter-spacing: 0.033125rem;
  -ms-letter-spacing: 0.033125rem;
  letter-spacing: 0.033125rem;
  line-height: 1.5rem;
  min-height: var(--size-2x);
  min-width: 2rem;
  outline: none;
  padding: 0 var(--spacing-3x);
  text-transform: uppercase;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.c2 {
  outline: 2px solid transparent;
  outline-offset: -2px;
}

.c2:focus-visible {
  box-shadow: 0 0 0 2px #006296;
  outline: 2px solid #84C6EA;
  outline-offset: -2px;
}

.c2 > svg {
  height: var(--size-1halfx);
  width: var(--size-1halfx);
}

.c3 {
  background-color: transparent;
  border-color: transparent;
  color: #FFFFFF;
  padding: 0;
  width: var(--size-2x);
}

.c3 {
  outline: 2px solid transparent;
  outline-offset: -2px;
}

.c3:focus-visible {
  box-shadow: 0 0 0 2px #84C6EA;
  outline: 2px solid #006296;
  outline-offset: -2px;
}

.c3:hover,
.c3[aria-expanded='true'] {
  background-color: rgb(0 0 0 / 0.5);
  border-color: transparent;
  color: #FFFFFF;
}

.c3[aria-disabled='true'] {
  background-color: transparent;
  border-color: transparent;
  color: #006296;
  cursor: not-allowed;
  pointer-events: none;
}

.c4 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background: #F1F2F2;
  border-radius: 50%;
  color: #60666E;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-weight: var(--font-semi-bold);
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  text-transform: capitalize;
  font-size: 0.75rem;
  height: var(--size-2x);
  -webkit-letter-spacing: 0.013rem;
  -moz-letter-spacing: 0.013rem;
  -ms-letter-spacing: 0.013rem;
  letter-spacing: 0.013rem;
  width: var(--size-2x);
}

.c6 {
  background-color: #FFFFFF;
  border: 1px solid #878F9A;
  border-radius: var(--border-radius);
  box-shadow: 0 10px 20px 0 rgb(0 0 0 / 0.2);
  color: #1B1C1E;
  list-style-type: none;
  position: absolute;
  width: 100%;
  z-index: 700;
}

.c0 {
  position: relative;
}

.c7 {
  max-width: 350px;
  min-width: 200px;
  right: 0;
  width: initial;
}

.c18 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-radius: var(--border-radius);
  color: #006296;
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-size: 1rem;
  line-height: 1.5rem;
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.c18:hover {
  color: #003A5A;
}

.c18:visited {
  color: #006296;
}

.c18 {
  outline: 2px solid transparent;
  outline-offset: -2px;
}

.c18:focus-visible {
  box-shadow: 0 0 0 2px #006296;
  outline: 2px solid #84C6EA;
  outline-offset: -2px;
}

.c17 {
  border: 0;
  -webkit-clip: rect(0,0,0,0);
  clip: rect(0,0,0,0);
  height: 1px;
  margin: -1px;
  overflow: hidden;
  padding: 0;
  position: absolute;
  width: 1px;
}

.c22 {
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  height: 1rem;
  margin-left: var(--spacing-half);
  margin-right: 0;
  width: 1rem;
}

.c19 {
  -webkit-align-items: baseline;
  -webkit-box-align: baseline;
  -ms-flex-align: baseline;
  align-items: baseline;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
}

.c19:visited svg {
  color: #006296;
}

.c21 {
  display: block;
  overflow: hidden;
  text-overflow: ellipsis;
}

.c8 {
  margin: 0;
  overflow-y: auto;
  padding: 0;
}

.c8:not(:last-child)::after {
  border-bottom: 1px solid #DBDEE1;
  content: '';
  display: block;
  margin: 0 var(--spacing-2x);
}

.c11 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  max-width: 100%;
}

.c12 {
  line-height: 1.25rem;
  margin: auto var(--spacing-1x) auto 0;
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
}

.c10 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-flow: row wrap;
  -ms-flex-flow: row wrap;
  flex-flow: row wrap;
  font-size: 0.875rem;
  margin: 0;
  overflow: hidden;
  padding: 0 0 0 var(--spacing-half);
}

.c14 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-flow: row wrap;
  -ms-flex-flow: row wrap;
  flex-flow: row wrap;
  font-size: 1rem;
  margin: 0;
  overflow: hidden;
  padding: 0 0 0 var(--spacing-half);
}

.c9 {
  color: #1B1C1E;
  display: block;
  font-size: 1rem;
  line-height: 2.5rem;
  overflow: hidden;
  padding: var(--spacing-1x) var(--spacing-2x);
  -webkit-text-decoration: none;
  text-decoration: none;
  white-space: nowrap;
}

.c13 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: #1B1C1E;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-size: 1rem;
  height: 2.5rem;
  line-height: 2rem;
  padding: 0 var(--spacing-2x);
  -webkit-text-decoration: none;
  text-decoration: none;
  white-space: nowrap;
}

.c13 {
  outline: 2px solid transparent;
  outline-offset: -2px;
}

.c13:focus-visible {
  box-shadow: 0 0 0 0 transparent;
  outline: 2px solid #006296;
  outline-offset: -2px;
}

.c13:hover {
  background-color: #DBDEE1;
}

.c13[disabled],
.c13[disabled] * {
  color: #B7BBC2;
  cursor: default;
  fill: #B7BBC2;
  pointer-events: none;
}

.c15 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: #1B1C1E;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-size: 1rem;
  height: 2.5rem;
  line-height: 2rem;
  padding: 0 var(--spacing-2x);
  -webkit-text-decoration: none;
  text-decoration: none;
  white-space: nowrap;
}

.c15 {
  outline: 2px solid transparent;
  outline-offset: -2px;
}

.c15:focus-visible {
  box-shadow: 0 0 0 0 transparent;
  outline: 2px solid #006296;
  outline-offset: -2px;
}

.c15:hover {
  background-color: transparent;
}

.c15[disabled],
.c15[disabled] * {
  color: #B7BBC2;
  cursor: default;
  fill: #B7BBC2;
  pointer-events: none;
}

.c16 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: #1B1C1E;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-size: 1rem;
  height: 2.5rem;
  line-height: 2rem;
  padding: 0 var(--spacing-2x);
  -webkit-text-decoration: none;
  text-decoration: none;
  white-space: nowrap;
}

.c16 {
  outline: 2px solid transparent;
  outline-offset: -2px;
}

.c16:focus-visible {
  box-shadow: 0 0 0 0 transparent;
  outline: 2px solid #006296;
  outline-offset: -2px;
}

.c16:hover {
  background-color: #DBDEE1;
}

.c16[disabled],
.c16[disabled] * {
  color: #B7BBC2;
  cursor: default;
  fill: #B7BBC2;
  pointer-events: none;
}

.c20 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: #1B1C1E;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-size: 1rem;
  height: 2.5rem;
  line-height: 2rem;
  padding: 0 var(--spacing-2x);
  -webkit-text-decoration: none;
  text-decoration: none;
  white-space: nowrap;
  padding: 0 var(--spacing-2x);
}

.c20 {
  outline: 2px solid transparent;
  outline-offset: -2px;
}

.c20:focus-visible {
  box-shadow: 0 0 0 0 transparent;
  outline: 2px solid #006296;
  outline-offset: -2px;
}

.c20:hover {
  background-color: #DBDEE1;
}

.c20[disabled],
.c20[disabled] * {
  color: #B7BBC2;
  cursor: default;
  fill: #B7BBC2;
  pointer-events: none;
}

.c20:visited svg {
  color: #1B1C1E;
}

.c20 span {
  color: #1B1C1E;
  padding: 0 0 0 var(--spacing-half);
}

.c1 button {
  height: -webkit-fit-content;
  height: -moz-fit-content;
  height: fit-content;
  padding: 0;
}

.c5 {
  margin-right: 0;
}

<div
  aria-label=""
  class="c0 c1"
  data-testid="dropdown-container"
  id="uuid1"
>
  <button
    aria-expanded="false"
    class="c2 c3"
    data-testid="menu-button"
    type="button"
  >
    <div
      aria-label="Test Button avatar"
      class="c4 c5"
      role="img"
    >
      <span
        data-testid="avatar-initials"
      >
        TB
      </span>
    </div>
  </button>
  <div
    class="c6 c7"
    data-testid="user-profile"
    hidden=""
    id="uuid2"
  >
    <ul
      aria-labelledby="user-label"
      class="c8"
    >
      <li
        class="c9"
      >
        <div
          class="c10"
        >
          <div
            class="c11"
          >
            <span
              class="c12"
            >
              Test Button
            </span>
          </div>
        </div>
      </li>
    </ul>
    <ul
      aria-labelledby="user-actions"
      class="c8"
    >
      <li>
        <a
          aria-disabled="false"
          class="c13"
          data-testid="listitem-optionA"
          href="/testa"
          tabindex="0"
        >
          <div
            class="c14"
          >
            <div
              class="c11"
            >
              <span
                class="c12"
              >
                Option A
              </span>
            </div>
          </div>
        </a>
      </li>
      <li>
        <a
          aria-disabled="true"
          class="c15"
          data-testid="listitem-optionB"
          disabled=""
          href="/testb"
          tabindex="-1"
        >
          <div
            class="c14"
          >
            <div
              class="c11"
            >
              <span
                class="c12"
              >
                Option B
              </span>
            </div>
          </div>
        </a>
      </li>
      <li>
        <a
          aria-disabled="false"
          class="c13"
          data-testid="listitem-optionC"
          href="/testc"
          tabindex="0"
        >
          <div
            class="c14"
          >
            <div
              class="c11"
            >
              <span
                class="c12"
              >
                Option C
              </span>
            </div>
          </div>
        </a>
      </li>
      <li>
        <a
          aria-disabled="false"
          class="c16"
          href="www.test.ca"
          tabindex="0"
          target="_blank"
        >
          <div
            class="c14"
          >
            <div
              class="c11"
            >
              <span
                class="c12"
              >
                Option D
              </span>
            </div>
          </div>
          <span
            class="c17"
            data-testid="screen-reader-text"
          >
            (opens in a new tab)
          </span>
        </a>
      </li>
      <li>
        <a
          aria-disabled="false"
          class="c18 c19 c20"
          href="www.test.ca"
          target="_blank"
        >
          <span
            class="c21"
          >
            Option E
          </span>
          <svg
            aria-label="opens in a new tab"
            class="c22"
            color="currentColor"
            focusable="false"
            height="16"
            role="img"
            width="16"
          />
          <span
            class="c17"
            data-testid="screen-reader-text"
          >
            (opens in a new tab)
          </span>
        </a>
      </li>
    </ul>
  </div>
</div>
`;

exports[`UserProfile Matches Snapshot (tag="nav") 1`] = `
.c1 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background: inherit;
  border: 1px solid;
  border-radius: 1.5rem;
  box-sizing: border-box;
  color: inherit;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-family: inherit;
  font-size: 0.75rem;
  font-weight: var(--font-bold);
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-letter-spacing: 0.025rem;
  -moz-letter-spacing: 0.025rem;
  -ms-letter-spacing: 0.025rem;
  letter-spacing: 0.025rem;
  line-height: 1rem;
  min-height: var(--size-2x);
  min-width: 2rem;
  outline: none;
  padding: 0 var(--spacing-2x);
  text-transform: uppercase;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.c1 {
  outline: 2px solid transparent;
  outline-offset: -2px;
}

.c1:focus-visible {
  box-shadow: 0 0 0 2px #006296;
  outline: 2px solid #84C6EA;
  outline-offset: -2px;
}

.c1 > svg {
  height: var(--size-1x);
  width: var(--size-1x);
}

.c2 {
  background-color: transparent;
  border-color: transparent;
  color: #FFFFFF;
  padding: 0;
  width: var(--size-2x);
}

.c2 {
  outline: 2px solid transparent;
  outline-offset: -2px;
}

.c2:focus-visible {
  box-shadow: 0 0 0 2px #84C6EA;
  outline: 2px solid #006296;
  outline-offset: -2px;
}

.c2:hover,
.c2[aria-expanded='true'] {
  background-color: rgb(0 0 0 / 0.5);
  border-color: transparent;
  color: #FFFFFF;
}

.c2[aria-disabled='true'] {
  background-color: transparent;
  border-color: transparent;
  color: #006296;
  cursor: not-allowed;
  pointer-events: none;
}

.c3 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background: #F1F2F2;
  border-radius: 50%;
  color: #60666E;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-weight: var(--font-semi-bold);
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  text-transform: capitalize;
  font-size: 0.625rem;
  height: var(--size-1halfx);
  -webkit-letter-spacing: 0.011rem;
  -moz-letter-spacing: 0.011rem;
  -ms-letter-spacing: 0.011rem;
  letter-spacing: 0.011rem;
  width: var(--size-1halfx);
}

.c5 {
  background-color: #FFFFFF;
  border: 1px solid #878F9A;
  border-radius: var(--border-radius);
  box-shadow: 0 10px 20px 0 rgb(0 0 0 / 0.2);
  color: #1B1C1E;
  list-style-type: none;
  position: absolute;
  width: 100%;
  z-index: 700;
}

.c0 {
  position: relative;
}

.c6 {
  max-width: 350px;
  min-width: 200px;
  right: 0;
  width: initial;
}

.c17 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-radius: var(--border-radius);
  color: #006296;
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-size: 0.875rem;
  line-height: 1.5rem;
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.c17:hover {
  color: #003A5A;
}

.c17:visited {
  color: #006296;
}

.c17 {
  outline: 2px solid transparent;
  outline-offset: -2px;
}

.c17:focus-visible {
  box-shadow: 0 0 0 2px #006296;
  outline: 2px solid #84C6EA;
  outline-offset: -2px;
}

.c16 {
  border: 0;
  -webkit-clip: rect(0,0,0,0);
  clip: rect(0,0,0,0);
  height: 1px;
  margin: -1px;
  overflow: hidden;
  padding: 0;
  position: absolute;
  width: 1px;
}

.c21 {
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  height: 1rem;
  margin-left: var(--spacing-half);
  margin-right: 0;
  width: 1rem;
}

.c18 {
  -webkit-align-items: baseline;
  -webkit-box-align: baseline;
  -ms-flex-align: baseline;
  align-items: baseline;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
}

.c18:visited svg {
  color: #006296;
}

.c20 {
  display: block;
  overflow: hidden;
  text-overflow: ellipsis;
}

.c7 {
  margin: 0;
  overflow-y: auto;
  padding: 0;
}

.c7:not(:last-child)::after {
  border-bottom: 1px solid #DBDEE1;
  content: '';
  display: block;
  margin: 0 var(--spacing-2x);
}

.c10 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  max-width: 100%;
}

.c11 {
  line-height: 1.25rem;
  margin: auto var(--spacing-1x) auto 0;
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
}

.c9 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-flow: row wrap;
  -ms-flex-flow: row wrap;
  flex-flow: row wrap;
  font-size: 0.75rem;
  margin: 0;
  overflow: hidden;
  padding: 0 0 0 var(--spacing-half);
}

.c13 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-flow: row wrap;
  -ms-flex-flow: row wrap;
  flex-flow: row wrap;
  font-size: 0.875rem;
  margin: 0;
  overflow: hidden;
  padding: 0 0 0 var(--spacing-half);
}

.c8 {
  color: #1B1C1E;
  display: block;
  font-size: 0.875rem;
  line-height: 2rem;
  overflow: hidden;
  padding: var(--spacing-1x) var(--spacing-2x);
  -webkit-text-decoration: none;
  text-decoration: none;
  white-space: nowrap;
}

.c12 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: #1B1C1E;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-size: 0.875rem;
  height: 2rem;
  line-height: 2rem;
  padding: 0 var(--spacing-2x);
  -webkit-text-decoration: none;
  text-decoration: none;
  white-space: nowrap;
}

.c12 {
  outline: 2px solid transparent;
  outline-offset: -2px;
}

.c12:focus-visible {
  box-shadow: 0 0 0 0 transparent;
  outline: 2px solid #006296;
  outline-offset: -2px;
}

.c12:hover {
  background-color: #DBDEE1;
}

.c12[disabled],
.c12[disabled] * {
  color: #B7BBC2;
  cursor: default;
  fill: #B7BBC2;
  pointer-events: none;
}

.c14 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: #1B1C1E;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-size: 0.875rem;
  height: 2rem;
  line-height: 2rem;
  padding: 0 var(--spacing-2x);
  -webkit-text-decoration: none;
  text-decoration: none;
  white-space: nowrap;
}

.c14 {
  outline: 2px solid transparent;
  outline-offset: -2px;
}

.c14:focus-visible {
  box-shadow: 0 0 0 0 transparent;
  outline: 2px solid #006296;
  outline-offset: -2px;
}

.c14:hover {
  background-color: transparent;
}

.c14[disabled],
.c14[disabled] * {
  color: #B7BBC2;
  cursor: default;
  fill: #B7BBC2;
  pointer-events: none;
}

.c15 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: #1B1C1E;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-size: 0.875rem;
  height: 2rem;
  line-height: 2rem;
  padding: 0 var(--spacing-2x);
  -webkit-text-decoration: none;
  text-decoration: none;
  white-space: nowrap;
}

.c15 {
  outline: 2px solid transparent;
  outline-offset: -2px;
}

.c15:focus-visible {
  box-shadow: 0 0 0 0 transparent;
  outline: 2px solid #006296;
  outline-offset: -2px;
}

.c15:hover {
  background-color: #DBDEE1;
}

.c15[disabled],
.c15[disabled] * {
  color: #B7BBC2;
  cursor: default;
  fill: #B7BBC2;
  pointer-events: none;
}

.c19 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: #1B1C1E;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-size: 0.875rem;
  height: 2rem;
  line-height: 2rem;
  padding: 0 var(--spacing-2x);
  -webkit-text-decoration: none;
  text-decoration: none;
  white-space: nowrap;
  padding: 0 var(--spacing-2x);
}

.c19 {
  outline: 2px solid transparent;
  outline-offset: -2px;
}

.c19:focus-visible {
  box-shadow: 0 0 0 0 transparent;
  outline: 2px solid #006296;
  outline-offset: -2px;
}

.c19:hover {
  background-color: #DBDEE1;
}

.c19[disabled],
.c19[disabled] * {
  color: #B7BBC2;
  cursor: default;
  fill: #B7BBC2;
  pointer-events: none;
}

.c19:visited svg {
  color: #1B1C1E;
}

.c19 span {
  color: #1B1C1E;
  padding: 0 0 0 var(--spacing-half);
}

.c4 {
  margin-right: 0;
}

<nav
  aria-label="User menu"
  class="c0 "
  data-testid="dropdown-container"
  id="uuid1"
>
  <button
    aria-expanded="false"
    class="c1 c2"
    data-testid="menu-button"
    type="button"
  >
    <div
      aria-label="Test Button avatar"
      class="c3 c4"
      role="img"
    >
      <span
        data-testid="avatar-initials"
      >
        TB
      </span>
    </div>
  </button>
  <div
    class="c5 c6"
    data-testid="user-profile"
    hidden=""
    id="uuid2"
  >
    <ul
      aria-labelledby="user-label"
      class="c7"
    >
      <li
        class="c8"
      >
        <div
          class="c9"
        >
          <div
            class="c10"
          >
            <span
              class="c11"
            >
              Test Button
            </span>
          </div>
        </div>
      </li>
    </ul>
    <ul
      aria-labelledby="user-actions"
      class="c7"
    >
      <li>
        <a
          aria-disabled="false"
          class="c12"
          data-testid="listitem-optionA"
          href="/testa"
          tabindex="0"
        >
          <div
            class="c13"
          >
            <div
              class="c10"
            >
              <span
                class="c11"
              >
                Option A
              </span>
            </div>
          </div>
        </a>
      </li>
      <li>
        <a
          aria-disabled="true"
          class="c14"
          data-testid="listitem-optionB"
          disabled=""
          href="/testb"
          tabindex="-1"
        >
          <div
            class="c13"
          >
            <div
              class="c10"
            >
              <span
                class="c11"
              >
                Option B
              </span>
            </div>
          </div>
        </a>
      </li>
      <li>
        <a
          aria-disabled="false"
          class="c12"
          data-testid="listitem-optionC"
          href="/testc"
          tabindex="0"
        >
          <div
            class="c13"
          >
            <div
              class="c10"
            >
              <span
                class="c11"
              >
                Option C
              </span>
            </div>
          </div>
        </a>
      </li>
      <li>
        <a
          aria-disabled="false"
          class="c15"
          href="www.test.ca"
          tabindex="0"
          target="_blank"
        >
          <div
            class="c13"
          >
            <div
              class="c10"
            >
              <span
                class="c11"
              >
                Option D
              </span>
            </div>
          </div>
          <span
            class="c16"
            data-testid="screen-reader-text"
          >
            (opens in a new tab)
          </span>
        </a>
      </li>
      <li>
        <a
          aria-disabled="false"
          class="c17 c18 c19"
          href="www.test.ca"
          target="_blank"
        >
          <span
            class="c20"
          >
            Option E
          </span>
          <svg
            aria-label="opens in a new tab"
            class="c21"
            color="currentColor"
            focusable="false"
            height="16"
            role="img"
            width="16"
          />
          <span
            class="c16"
            data-testid="screen-reader-text"
          >
            (opens in a new tab)
          </span>
        </a>
      </li>
    </ul>
  </div>
</nav>
`;
